@@ -277,6 +277,12 @@ Usefull configuration in the server.conf file is:
 	option.</dd>
 <dt>domain_order [domain1] [domain2] .... <dd>In which order the domains
     should be listed, defaults to sorted. This is a top-level option.</dd>
+<dt>category_order_order [category1] [category2] .... <dd>In which order
+    the categories should be listed, defaults to sorted. This is a
+    node-level option.</dd>
+<dt>service_order_order [service1] [service2] .... <dd>In which order
+    the services should be listed, defaults to sorted. This is a
+    node-level option.</dd>
 
 <h3>munin-limits</h3>
 
